Fix device isolation bug and add mobile color picker feature
Security & Bug Fixes:
- Fix reminder notification isolation: Only the device that created a reminder now receives it
- Add subscriptionId column to reminders table to track creating device
- Update scheduler to send only to specific subscription instead of broadcasting
- Add getSubscriptionById() database function for targeted delivery

Mobile UI Enhancements:
- Add color picker UI to mobile event creation modal (9 colors)
- Add mobile-specific CSS for color buttons and picker
- Update event dots to display individual event colors
- Match desktop color picker functionality on mobile

Code Improvements:
- Add session-store.js for OAuth CSRF protection
- Add token-refresh.js for automatic Google token refresh
- Update /reminder endpoint to require subscriptionId
- Update client code (TMR.js, calendar.js, calendar-mobile.js) to send subscriptionId
- Fix duplicate code sections in server/index.js

Ready for family hub feature: Color picker and subscription tracking foundation in place

--- a/TMR.html
+++ b/TMR.html
@@ -1108,6 +1108,20 @@
                                     <label>Notes</label>
                                     <textarea id="mobile-event-notes" rows="3"></textarea>
                                 </div>
+                                <div class="mobile-form-group">
+                                    <label>Color</label>
+                                    <div class="mobile-color-picker">
+                                        <button type="button" class="mobile-color-btn" data-color="#ff6b6b" title="Red" style="background: #ff6b6b;"></button>
+                                        <button type="button" class="mobile-color-btn" data-color="#ff922b" title="Orange" style="background: #ff922b;"></button>
+                                        <button type="button" class="mobile-color-btn" data-color="#ffd43b" title="Yellow" style="background: #ffd43b;"></button>
+                                        <button type="button" class="mobile-color-btn" data-color="#51cf66" title="Green" style="background: #51cf66;"></button>
+                                        <button type="button" class="mobile-color-btn" data-color="#0089f1" title="Blue" style="background: #0089f1;"></button>
+                                        <button type="button" class="mobile-color-btn" data-color="#9775fa" title="Violet" style="background: #9775fa;"></button>
+                                        <button type="button" class="mobile-color-btn" data-color="#1f1f1f" title="Black" style="background: #1f1f1f;"></button>
+                                        <button type="button" class="mobile-color-btn" data-color="#999999" title="Grey" style="background: #999999;"></button>
+                                        <button type="button" class="mobile-color-btn" data-color="#8B4513" title="Brown" style="background: #8B4513;"></button>
+                                    </div>
+                                </div>
                                 <div class="mobile-form-actions">
                                     <button type="submit" class="mobile-save-btn">Save</button>
                                     <button type="button" id="mobile-delete-btn" class="mobile-delete-btn danger" style="display:none;">Delete</button>
